[gd_scene load_steps=2 format=3 uid="uid://dkc0npgehm4t3"]

[ext_resource type="Script" path="res://GUI_auxs/scripts/faction_resources.gd" id="1_m7iyt"]

[node name="Panel" type="Panel"]
offset_right = 469.0
offset_bottom = 82.0
script = ExtResource("1_m7iyt")

[node name="stone_label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = -1.0
offset_right = 55.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="wood_label" type="Label" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 1.0
offset_right = 150.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="food_label" type="Label" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = -1.0
offset_right = 272.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="gold_label" type="Label" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 1.0
offset_right = 396.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
text = "0"
